--- a/frontend/src/pages/globals.css
+++ b/frontend/src/pages/globals.css
@@ -21,9 +21,10 @@ body {
   background: linear-gradient(92deg, #012469 -10.76%, #034be2 121.45%);
 }
 
-/* td {
-  padding: 10px;
-  border-bottom: 15px solid transparent;
-  background-color: white;
-  background-clip: padding-box;
-} */
+tbody:before {
+  content: "@";
+  display: block;
+  line-height: 10px;
+  text-indent: -99999px;
+  visibility: hidden;
+}
